Fix layout on mobile

--- a/frontend/stylesheets/create-ad.scss
+++ b/frontend/stylesheets/create-ad.scss
@@ -1,18 +1,17 @@
 .create-ad {
   $box-padding: 30px;
   margin-top: 50px;
-  padding: $box-padding;
-  display: flex;
   box-shadow: 0 2px 2px 1px #CCC;
+  @include equal-height-columns;
 
   &__inputs {
     background-color: $light-grey-background;
-    margin-left: -$box-padding;
-    padding-left: $box-padding;
-    margin-top: -$box-padding;
-    padding-top: $box-padding;
-    margin-bottom: -$box-padding;
-    padding-bottom: $box-padding;
+    padding: $box-padding;
+  }
+
+  &__filters-submit {
+    background-color: $white;
+    padding: $box-padding;
   }
 
   &__heading {
