--- a/frontend/stylesheets/lists.scss
+++ b/frontend/stylesheets/lists.scss
@@ -11,10 +11,7 @@
   }
 
   &__row {
-    display: flex;
-    @media (max-width: $screen-xs-max) {
-      display: block;
-    }
+    @include equal-height-columns;
   }
 
   &__item {
